--- a/exercises/01/nml24_exercise1_sol.ipynb
+++ b/exercises/01/nml24_exercise1_sol.ipynb
@@ -2360,13 +2360,6 @@
                 "ax.set(title=\"SkLearn kNN implementation\", ylabel=\"precision\", xlabel=\"k value\")\n",
                 "plt.show()"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
         }
     ],
     "metadata": {
@@ -2375,7 +2368,7 @@
             "toc_visible": true
         },
         "kernelspec": {
-            "display_name": "playground",
+            "display_name": "nml",
             "language": "python",
             "name": "python3"
         },
@@ -2389,12 +2382,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.1"
-        },
-        "vscode": {
-            "interpreter": {
-                "hash": "1b6258ac5f9ce9aee8bc7e8f09e746bac739d42425ff8343fe5df569d2e6cb19"
-            }
+            "version": "3.9.18"
         }
     },
     "nbformat": 4,
