--- a/exercises/02/notebook_2.ipynb
+++ b/exercises/02/notebook_2.ipynb
@@ -224,9 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer here:**\n",
-    "\n",
-    "..."
+    "**Your answer here:**"
    ]
   },
   {
@@ -261,20 +259,29 @@
     "    # Your solution here ###########################################################\n",
     "    ...\n",
     "\n",
+    "    if normalize is None:\n",
+    "        ...\n",
+    "\n",
     "    if normalize == \"sym\":\n",
     "        ...\n",
     "\n",
     "    elif normalize == \"rw\":\n",
     "        ...\n",
     "    # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+    "\n",
     "    else:\n",
     "        raise ValueError(f\"Unknown normalization: {normalize}\")\n",
     "\n",
     "\n",
-    "def compute_number_connected_components(lamb: np.array, threshold: float):\n",
-    "    \"\"\"lamb: array of eigenvalues of a Laplacian\n",
-    "    Return:\n",
-    "    n_components (int): number of connected components.\n",
+    "def compute_number_connected_components(l_eigval: np.array, eps: float = 1e-12):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    Args:\n",
+    "        l_eigval (np.array): eigenvalues of a Laplacian\n",
+    "        threshold (float, optional): cutoff value for very small numbers\n",
+    "\n",
+    "    Returns:\n",
+    "        n_components (int): number of connected components.\n",
     "    \"\"\"\n",
     "    # Your solution here ###########################################################\n",
     "    ...\n",
@@ -283,8 +290,8 @@
     "\n",
     "def spectral_decomposition(laplacian: np.ndarray):\n",
     "    \"\"\"Return:\n",
-    "    lamb (np.array): eigenvalues of the Laplacian\n",
-    "    U (np.ndarray): corresponding eigenvectors.\n",
+    "    l_eigvec (np.array): eigenvalues of the Laplacian\n",
+    "    l_eigvals (np.ndarray): corresponding eigenvectors.\n",
     "    \"\"\"\n",
     "    # Your solution here ###########################################################\n",
     "    ...\n",
@@ -292,25 +299,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def get_laplacians(G: nx.Graph):\n",
-    "    A = nx.adjacency_matrix(G).toarray().astype(float)\n",
+    "#### Question 2.2: Compute how many connected components each of the graphs has.\n",
     "\n",
-    "    laplacian_comb = compute_laplacian(A, normalize=None)\n",
-    "\n",
-    "    laplacian_norm = compute_laplacian(A, normalize=\"sym\")\n",
-    "\n",
-    "    laplacian_rw = compute_laplacian(A, normalize=\"rw\")\n",
-    "\n",
-    "    return laplacian_comb, laplacian_norm, laplacian_rw\n",
-    "\n",
-    "\n",
-    "laplacian_comb_boxes, laplacian_norm_boxes, laplacian_rw_boxes = get_laplacians(G_boxes)\n",
-    "laplacian_comb_moons, laplacian_norm_moons, laplacian_rw_moons = get_laplacians(G_moons)"
+    "Does the result change according to the laplacian definition?\n"
    ]
   },
   {
@@ -319,23 +313,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamb_comb_boxes, U_comb_boxes = spectral_decomposition(laplacian_comb_boxes)\n",
-    "lamb_comb_moons, U_comb_moons = spectral_decomposition(laplacian_comb_moons)\n",
+    "# Your solution here ###############################################################\n",
     "\n",
-    "lamb_norm_boxes, U_norm_boxes = spectral_decomposition(laplacian_norm_boxes)\n",
-    "lamb_norm_moons, U_norm_moons = spectral_decomposition(laplacian_norm_moons)\n",
     "\n",
-    "lamb_rw_boxes, U_rw_boxes = spectral_decomposition(laplacian_rw_boxes)\n",
-    "lamb_rw_boxes = np.real(lamb_rw_boxes)\n",
-    "lamb_rw_moons, U_rw_moons = spectral_decomposition(laplacian_rw_moons)\n",
-    "lamb_rw_moons = np.real(lamb_rw_moons)"
+    "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 2.2: Implement spectral clustering, then compute it and plot it for each Laplacian definition"
+    "#### Question 2.3: Implement spectral clustering, then compute it and plot it for each Laplacian definition\n",
+    "\n",
+    "Implement the `SpectralClustering` class, using the previously defined `compute_laplacian` and `spectral_decomposition`."
    ]
   },
   {
@@ -349,7 +339,7 @@
     "        self.n_classes = n_classes\n",
     "        self.normalize = normalize\n",
     "        # Your solution here ###########################################################\n",
-    "        ...\n",
+    "        self.clustering_method = ...\n",
     "        # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
     "\n",
     "    def fit_predict(self, G: nx.Graph):\n",
@@ -415,15 +405,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 2.3: Compare spectral clusters to K-means."
+    "#### Question 2.4: Compare the spectral clustering obtained with the different Laplacians, and discuss about differences"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer here:**\n",
-    "..."
+    "**Your answer here:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2.5: Compare spectral clusters to K-means."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Your answer here:**"
    ]
   },
   {
