--- a/exercises/05/gdl_tutorial.ipynb
+++ b/exercises/05/gdl_tutorial.ipynb
@@ -1762,7 +1762,7 @@
         "### Definitions\n",
         "\n",
         "- **Train data** is the dataset used to train the model. The model learns the objective function by observing these samples and adjusting its parameters, denoted as $\\mathbf{\\Theta}$, to minimize the loss function $f(\\mathcal{D}_{tr}, \\mathbf{\\Theta})$.\n",
-        "- **Test data** is is a completely independent dataset, $\\mathcal{D}_{te}$ that the model has never seen during training. It is used to estimate the model’s *expected performance*, i.e., its average performance on unseen real-world data.\n",
+        "- **Test data** is a completely independent dataset, $\\mathcal{D}_{te}$ that the model has never seen during training. It is used to estimate the model’s *expected performance*, i.e., its average performance on unseen real-world data.\n",
         "- **Validation data** is another independent set of samples used during the training process to tune *hyperparameters*, i.e., configuration settings of the model that are not learned via gradient descent. In some cases, rather than having a fixed validation set, *cross-validation* techniques are employed.\n",
         "\n",
         "It is extremely important to always use a *test dataset* to report performances of your models, which is why an independent validation dataset shall be used for model selection.\n",
@@ -1907,7 +1907,7 @@
       "source": [
         "#### Graph-level tasks\n",
         "\n",
-        "In this case samples are single graphs and thus we can easily partiotion the dataset by randomly assigning graphs to each split."
+        "In this case samples are single graphs and thus we can easily partition the dataset by randomly assigning graphs to each split."
       ]
     },
     {
