--- a/exercises/05/notebook_5.ipynb
+++ b/exercises/05/notebook_5.ipynb
@@ -2352,7 +2352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2361,7 +2361,19 @@
         "id": "5QFyWI8-qiLT",
         "outputId": "d452a7f2-5b6c-4bef-b54b-e80f90931d61"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
+        }
+      ],
       "source": [
         "# Your solution here ###########################################################\n",
         "gl_classifier = MLPGLClassifier(data.x.shape[1]).to(device)\n",
