--- a/project/src/test.ipynb
+++ b/project/src/test.ipynb
@@ -26,30 +26,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import libraries\n",
     "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import sys\n",
     "\n",
     "#import modules\n",
     "import constants\n",
-    "from project.src.transform_func import *\n",
+    "from transform_func import *\n",
     "from cnn_base import CnnBase\n",
     "from dataloader import load_data\n",
+    "from utils import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_dir = Path.cwd().resolve().parent.parent\n",
+    "os.chdir(parent_dir)"
    ]
   },
   {
@@ -68,11 +72,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader_train = load_data(path=constants.TRAIN_DIR)\n"
+    "cfg = read_yml('project/config/exp/cnn/basic_cnn.yml')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader_train = load_data(cfg.get(\"datasets\")[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader_val = load_data(cfg.get(\"datasets\")[1])"
    ]
   },
   {
@@ -84,11 +113,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader_test = load_data(path=constants.TEST_DIR)"
+    "loader_test = load_data(cfg.get(\"datasets\")[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for test_images, test_labels in loader_test:  \n",
+    "    sample_image = test_images[0]    # Reshape them according to your needs.\n",
+    "    sample_label = test_labels[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_label"
    ]
   },
   {
@@ -531,55 +591,6 @@
    "source": [
     "basic_cnn.create_submission(loader_test, 'test.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/04/28 14:45:49 INFO mlflow.tracking.fluent: Experiment with name 'MLflow Quickstart' does not exist. Creating a new experiment.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🏃 View run sedate-owl-970 at: http://127.0.0.1:8080/#/experiments/896536270584832263/runs/0357a89c4ab6440489d1d8d61f00ddd1\n",
-      "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/896536270584832263\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Set our tracking server uri for logging\n",
-    "from mlflow.models import infer_signature\n",
-    "\n",
-    "mlflow.set_tracking_uri(uri=\"http://127.0.0.1:8080\")\n",
-    "\n",
-    "# Create a new MLflow Experiment\n",
-    "mlflow.set_experiment(\"MLflow Quickstart\")\n",
-    "\n",
-    "params = {\n",
-    "    \"solver\": \"lbfgs\",\n",
-    "    \"max_iter\": 1000,\n",
-    "    \"multi_class\": \"auto\",\n",
-    "    \"random_state\": 8888,\n",
-    "}\n",
-    "\n",
-    "# Start an MLflow run\n",
-    "with mlflow.start_run():\n",
-    "    # Log the hyperparameters\n",
-    "    mlflow.log_params(params)\n",
-    "\n",
-    "    # Set a tag that we can use to remind ourselves what this run was for\n",
-    "    mlflow.set_tag(\"Training Info\", \"Basic LR model for iris data\")\n",
-    "\n",
-    "    # Infer the model signature\n",
-    "    # signature = infer_signature(X_train, lr.predict(X_train))"
-   ]
   }
  ],
  "metadata": {
@@ -598,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
