fixing model import

--- a/project/src/test.ipynb
+++ b/project/src/test.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "# -*- authors : Vincent Roduit -*-\n",
     "# -*- date : 2025-04-24 -*-\n",
-    "# -*- Last revision: 2025-04-09 by roduit -*-\n",
+    "# -*- Last revision: 2025-05-02 by janzgraggen -*-\n",
     "# -*- python version : 3.11.11 -*-\n",
     "# -*- Description: Notebook that summarizeses the main results-*-"
    ]
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "#import modules\n",
     "import constants\n",
     "from transform_func import *\n",
-    "from cnn_base import CnnBase\n",
+    "from models.cnn_base import CnnBase\n",
     "from dataloader import load_data\n",
     "from utils import *\n",
     "\n",
