--- a/project/src/test.ipynb
+++ b/project/src/test.ipynb
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/nulpe/anaconda3/lib/python3.12/site-packages/torch/__config__.py:9: UserWarning: CUDA initialization: The NVIDIA driver on your system is too old (found version 11040). Please update your GPU driver by downloading and installing a new version from the URL: http://www.nvidia.com/Download/index.aspx Alternatively, go to: https://pytorch.org to install a PyTorch version that has been compiled with your version of the CUDA driver. (Triggered internally at /pytorch/c10/cuda/CUDAFunctions.cpp:109.)\n",
-      "  return torch._C._show_config()\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -60,16 +60,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent_dir = Path.cwd().resolve().parent.parent\n",
-    "os.chdir(parent_dir)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,13 +75,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cnn train data\n",
-    "cfg = read_yml('project/config/exp/cnn/basic_cnn.yml')\n",
-    "loader_train = load_data(cfg.get(\"datasets\")[0])"
+    "cfg = read_yml('../config/exp/cnn/basic_cnn_local_upsample.yml')\n",
+    "loader_train, dataset_train = load_data(cfg.get(\"datasets\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_weights_for_balanced_classes(samples, nclasses):\n",
+    "    n_samples = len(samples)\n",
+    "    count_per_class = [0] * nclasses\n",
+    "    for _, sample_class in samples:\n",
+    "        count_per_class[sample_class] += 1\n",
+    "    weight_per_class = [0.] * nclasses\n",
+    "    for i in range(nclasses):\n",
+    "        weight_per_class[i] = float(n_samples) / float(count_per_class[i])\n",
+    "    weights = [0] * n_samples\n",
+    "    for idx, (sample, sample_class) in enumerate(samples):\n",
+    "        weights[idx] = weight_per_class[sample_class]\n",
+    "    return weights\n",
+    "\n",
+    "n_classes = len(np.unique(dataset_train.get_label_array()))\n",
+    "\n",
+    "weights = make_weights_for_balanced_classes(dataset_train, n_classes)\n",
+    "\n",
+    "sampler = torch.utils.data.sampler.WeightedRandomSampler(weights, len(weights))\n",
+    "\n",
+    "loader_train = torch.utils.data.DataLoader(\n",
+    "    dataset_train,\n",
+    "    batch_size=cfg.get(\"batch_size\", 32),\n",
+    "    sampler=sampler,\n",
+    "    num_workers=cfg.get(\"num_workers\", 8),\n",
+    "    pin_memory=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader_train = torch.utils.data.DataLoader(\n",
+    "    dataset_train,\n",
+    "    batch_size=cfg.get(\"batch_size\", 32),\n",
+    "    sampler=None,\n",
+    "    num_workers=cfg.get(\"num_workers\", 8),\n",
+    "    pin_memory=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0.7928612661150664, 1: 0.20713873388493362}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "all_labels = torch.cat([data[1] for data in loader_train], dim=0)\n",
+    "unique, counts = torch.unique(all_labels, return_counts=True)\n",
+    "labels_prop = {int(k): v.item() / len(all_labels) for k, v in zip(unique, counts)}\n",
+    "print(labels_prop)"
    ]
   },
   {
@@ -232,8 +293,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for test_images, test_labels in loader_test:  \n",
-    "    sample_image = test_images[0]    # Reshape them according to your needs.\n",
+    "for test_samples, test_labels in loader_test:  \n",
+    "    sample_sample = test_samples[0]    # Reshape them according to your needs.\n",
     "    sample_label = test_labels[0]"
    ]
   },
@@ -1339,9 +1400,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ada)",
+   "display_name": "nml-project",
    "language": "python",
-   "name": "ada"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1353,7 +1414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
