potentially fixed base gcn

--- a/exercises/05/notebook_5_solution.ipynb
+++ b/exercises/05/notebook_5_solution.ipynb
@@ -61,16 +61,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
         "import torch\n",
         "\n",
-        "TORCH = torch.__version__.split('+')[0]\n",
-        "CUDA = torch.__version__.split('+')[1]\n",
-        "print(f\"PyTorch version: {TORCH}\")\n",
-        "print(f\"CUDA version: {CUDA}\")"
+        "# TORCH = torch.__version__.split('+')[0]\n",
+        "# CUDA = torch.__version__.split('+')[1]\n",
+        "# print(f\"PyTorch version: {TORCH}\")\n",
+        "# print(f\"CUDA version: {CUDA}\")"
       ]
     },
     {
@@ -118,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Q-ZfCASHUyyK"
       },
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "background_save": true
@@ -155,13 +155,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "PASnfjHmG5WN"
       },
       "outputs": [],
       "source": [
-        "dataset = GitHub(\".\")\n",
+        "dataset = GitHub(\"./data\")\n",
         "data = dataset._data"
       ]
     },
@@ -176,11 +176,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "EojTx0W9HEWB"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Design matrix\n",
+            "Num. nodes: 37700; num features: 128\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Design matrix\")\n",
         "n_nodes, n_feats = data.x.shape\n",
@@ -198,11 +207,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "pADYpCsfILUX"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Target vector\n",
+            "First five elements: tensor([0, 0, 1, 0, 1])\n",
+            "Number of samples: torch.Size([37700])\n",
+            "Number of nodes in class 1: 9739\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Target vector\")\n",
         "print(\"First five elements:\", data.y[:5])\n",
@@ -221,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "r96967dQJ909"
       },
@@ -241,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -249,7 +269,15 @@
         "id": "GvC2cdChIKV_",
         "outputId": "c71ed1cd-1388-4639-8524-0abcff590fdd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Edge index shape: torch.Size([2, 578006])\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Edge index shape:\", data.edge_index.shape)"
       ]
@@ -286,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -294,7 +322,17 @@
         "id": "Ci3Hoxz-ljdU",
         "outputId": "2d8aef5b-e38f-4cf2-f34b-9ce4e7bb7fff"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training set size: 29636 (78.61%)\n",
+            "Test set size: 8064 (21.39%)\n",
+            "Ratio of class 1 in training: 74.12%\n"
+          ]
+        }
+      ],
       "source": [
         "rng = torch.Generator().manual_seed(452)\n",
         "train_mask = torch.randn(n_nodes, generator=rng) < 0.8\n",
@@ -349,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "dtxCOzQgjsgV"
       },
@@ -375,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -383,7 +421,23 @@
         "id": "09E56x7SkyR6",
         "outputId": "2affcdba-1ff9-4e25-8de8-2d8421825203"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.80      0.62      0.70      2070\n",
+            "           1       0.88      0.95      0.91      5994\n",
+            "\n",
+            "    accuracy                           0.86      8064\n",
+            "   macro avg       0.84      0.78      0.80      8064\n",
+            "weighted avg       0.86      0.86      0.86      8064\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Your solution here ###########################################################\n",
         "\n",
@@ -439,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "jUkPozOLXsU2"
       },
@@ -471,7 +525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "lPl0GpFNXtqb"
       },
@@ -503,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -511,7 +565,23 @@
         "id": "R9auF0OKHsQ6",
         "outputId": "c0fa19e4-cc95-44e2-c0b9-51b1da87269b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.25      0.01      0.02      2070\n",
+            "           1       0.74      0.99      0.85      5994\n",
+            "\n",
+            "    accuracy                           0.74      8064\n",
+            "   macro avg       0.50      0.50      0.44      8064\n",
+            "weighted avg       0.62      0.74      0.64      8064\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Your solution here ###########################################################\n",
         "\n",
@@ -537,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -545,7 +615,23 @@
         "id": "5hS6Wk8rf769",
         "outputId": "8575254f-1487-421e-da12-5470386573cb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.80      0.62      0.70      2070\n",
+            "           1       0.88      0.95      0.91      5994\n",
+            "\n",
+            "    accuracy                           0.86      8064\n",
+            "   macro avg       0.84      0.78      0.80      8064\n",
+            "weighted avg       0.86      0.86      0.86      8064\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Your solution here ###########################################################\n",
         "\n",
@@ -607,7 +693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "zH3G5rTBtp6D"
       },
@@ -646,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "HiyHwfHLgsIT"
       },
@@ -677,7 +763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "aQu7n7_itgW9"
       },
@@ -720,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "_P-metq4DA8E"
       },
@@ -759,7 +845,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -767,7 +853,15 @@
         "id": "-H7iUiLHtp2K",
         "outputId": "0876d4ff-40bc-4742-cec2-4f183d2b360b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Using cpu device\n"
+          ]
+        }
+      ],
       "source": [
         "print(f\"Using {device} device\")\n",
         "\n",
@@ -913,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "NhIU33lY6H-Q"
       },
@@ -948,7 +1042,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -957,7 +1051,26 @@
         "id": "pllLi-s9H79q",
         "outputId": "137a031d-2973-43a6-b63d-41f976b714da"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Data(x=[37700, 128], edge_index=[2, 578006], y=[37700])\n"
+          ]
+        },
+        {
+          "ename": "NameError",
+          "evalue": "name 'metric_fn' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[32], line 38\u001b[0m\n\u001b[1;32m     34\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m optim\u001b[38;5;241m.\u001b[39mAdam(gcn\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m)\n\u001b[1;32m     36\u001b[0m loss_list \u001b[38;5;241m=\u001b[39m train_gnn_full(gcn, data, loss_fn, optimizer, n_epochs)\n\u001b[0;32m---> 38\u001b[0m metric_tr, metric_te \u001b[38;5;241m=\u001b[39m evaluate_gnn(gcn, data, train_mask, \u001b[43mmetric_fn\u001b[49m)\n\u001b[1;32m     40\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n_epochs \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m), loss_list, marker\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     41\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'metric_fn' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Your solution here ###########################################################\n",
         "\n",
@@ -975,7 +1088,7 @@
         "\n",
         "def train_gnn_full(model, data, loss_fn, optimizer, n_epochs):\n",
         "    loss_list = []\n",
-        "\n",
+        "    print(data)\n",
         "    data = data.to(device)\n",
         "\n",
         "    for epoch in range(n_epochs):\n",
@@ -990,7 +1103,7 @@
         "\n",
         "    return loss_list\n",
         "\n",
-        "\n",
+        "n_epochs = 15\n",
         "gcn = GCN(data.x.shape[1], hidden_channels=64).to(device)\n",
         "optimizer = optim.Adam(gcn.parameters(), lr=0.01)\n",
         "\n",
@@ -1007,6 +1120,26 @@
         "\n",
         "print(f\"Training metric: {metric_tr:.3f}\")\n",
         "print(f\"Test metric:     {metric_te:.3f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Data(x=[37700, 128], edge_index=[2, 578006], y=[37700])"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "data"
       ]
     },
     {
@@ -1566,7 +1699,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "nml",
+      "display_name": "nml-project",
       "language": "python",
       "name": "python3"
     },
@@ -1580,7 +1713,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.16"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
