--- a/project/src/test.ipynb
+++ b/project/src/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "# -*- authors : Vincent Roduit -*-\n",
     "# -*- date : 2025-04-24 -*-\n",
     "# -*- Last revision: 2025-05-02 by janzgraggen -*-\n",
-    "# -*- python version : 3.11.11 -*-\n",
+    "# -*- python version : 3.10.4 -*-\n",
     "# -*- Description: Notebook that summarizeses the main results-*-"
    ]
   },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,6 @@
     "#import modules\n",
     "import constants\n",
     "from transform_func import *\n",
-    "from models.cnn_base import CnnBase\n",
     "from dataloader import load_data\n",
     "from utils import *\n",
     "\n",
@@ -75,13 +74,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cnn train data\n",
     "cfg = read_yml('../config/exp/cnn/basic_cnn_local_upsample.yml')\n",
     "loader_train = load_data(cfg.get(\"datasets\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_elem = next(iter(loader_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 354, 19])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_elem[0].shape"
    ]
   },
   {
@@ -905,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basic_cnn = CnnModel(input_shape=19, output_shape=1)"
+    "basic_cnn = CNN(input_shape=19, output_shape=1)"
    ]
   },
   {
@@ -1343,7 +1371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
