--- a/project/src/report.ipynb
+++ b/project/src/report.ipynb
@@ -568,11 +568,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_metrics = pd.read_csv('../resources/lstm-gat_metrics_report.csv')"
+    "df_metrics_gat_lstm = pd.read_csv('../resources/lstm-gat_metrics_report.csv')\n",
+    "df_metrics_gcn_lstm = pd.read_csv('../resources/lstm-gcn_metrics_report.csv')\n",
+    "df_small_gcn = pd.read_csv('../resources/small-gcn_metrics_report.csv')"
    ]
   },
   {
@@ -638,11 +640,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_convergence(df_metrics, outdir='../resources', filename='convergence_plot.png', max_epoch=50)"
+    "plot_convergence(df_metrics_gat_lstm, outdir='../resources', filename='gat_lstm.png', max_epoch=50)\n",
+    "plot_convergence(df_metrics_gcn_lstm, outdir='../resources', filename='gcn_lstm.png', max_epoch=50)\n",
+    "plot_convergence(df_small_gcn, outdir='../resources', filename='small_gcn.png', max_epoch=50)"
    ]
   }
  ],
